<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="rynj.marryme.LoginScreen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:background="#ff07e4ff"
        style="@style/AppTheme">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/welcomeBack"
                android:id="@+id/textView"
                android:textSize="50sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="19dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/username"
                android:ems="10"
                android:id="@+id/username" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="21dp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:ems="10"
                android:id="@+id/password" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <Button
                android:layout_width="157dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:id="@+id/button3"
                android:layout_gravity="center_horizontal"
                android:theme="@android:style/Holo.Light.ButtonBar"
                android:onClick="VerifyCreds"
            />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:id="@+id/space" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:id="@+id/validation"
                android:textSize="30sp"
                android:gravity="center" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
