
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context=".StartScreen"
        android:backgroundTintMode="multiply"
        android:background="#ff006dff">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView"
            android:background="#ff07e4ff"
            style="@style/AppTheme">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/welcomeMessage"
                    android:id="@+id/textView"
                    android:textIsSelectable="false"
                    android:textSize="50sp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:background="#ff11a5ff"
                    android:textColor="#ff000000" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="26dp" />

                <Button
                    android:layout_width="157dp"
                    android:layout_height="wrap_content"
                    android:text="@string/enterCode"
                    android:id="@+id/button2"
                    android:layout_gravity="center_horizontal"
                    android:clickable="false"
                    android:enabled="true"
                    />

                <Space
                    android:layout_width="20dp"
                    android:layout_height="20dp" />

                <Button
                    android:layout_width="157dp"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:id="@+id/button3"
                    android:layout_gravity="center_horizontal"
                    android:theme="@android:style/Holo.Light.ButtonBar"
                    android:onClick="StartLoginScreen"/>

                <Space
                    android:layout_width="20px"
                    android:layout_height="20px" />

                <Button
                    android:layout_width="157dp"
                    android:layout_height="wrap_content"
                    android:text="@string/createAccount"
                    android:id="@+id/button4"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
